Home Page Design Updated

--- a/apv/templates/shop/index.html
+++ b/apv/templates/shop/index.html
@@ -3,6 +3,7 @@
     Shopkart | Online Shopping
 {%endblock title %}
 {% block content %}
+{% include 'shop/inc/slider.html' %}
     <div class="container" style="margin-top: 70px;">
         <div class="row">
             <div class="col-12">
