Labour Attendance Document Updated

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,6 @@
-.corousel-item img{
+.carousel-item img{
     object-fit: cover;
     object-position: top;
-    height: 30vh;
+    height: 80vh;
     overflow: hidden;
 }
