Category Design Updated

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300&display=swap');
+
+html{
+    font-size: 14px;
+}
+body{
+    font-family: 'Noto Sans',sans-serif;
+}
+a{
+    text-decoration: none;
+}
 .carousel-item img{
     object-fit: cover;
     object-position: top;
