--- a/apv/templates/shop/inc/slider.html
+++ b/apv/templates/shop/inc/slider.html
@@ -8,13 +8,13 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="{% static 'images/1.jpeg' %}" class="d-block w-100" alt="Slide 1">
+        <img src="{% static 'images/1.jpg' %}" class="d-block w-100" alt="Slide 1">
       </div>
       <div class="carousel-item">
-        <img src="{% static 'images/2.jpeg' %}" class="d-block w-100" alt="Slide 2">
+        <img src="{% static 'images/2.jpg' %}" class="d-block w-100" alt="Slide 2">
       </div>
       <div class="carousel-item">
-        <img src="{% static 'images/3.jpeg' %}" class="d-block w-100" alt="Slide 3">
+        <img src="{% static 'images/3.jpg' %}" class="d-block w-100" alt="Slide 3">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
