--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,3 +15,16 @@ a{
     height: 80vh;
     overflow: hidden;
 }
+.old_price{
+    font-weight: bold;
+    color: red;
+
+}
+.new_price{
+    font-weight: bold;
+    background-color: green;
+    color:white;
+    padding: 2px;
+    border-radius: 5px;
+
+}
