--- a/apv/templates/shop/inc/navbar.html
+++ b/apv/templates/shop/inc/navbar.html
@@ -1,19 +1,22 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">ShopKart</a>
+      <a class="navbar-brand" href="#"><i class="fa fa-cart-plus"></i>&nbsp;ShopKart</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
+            <a class="nav-link active" aria-current="page" href="{% url 'home' %}"><i class="fa fa-cart-home"></i>&nbsp;Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'register' %}">Register</a>
+            <a class="nav-link" href="{% url 'register' %}"><i class="fa fa-user"></i>&nbsp;Register</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'collections' %}">Collections</a>
+            <a class="nav-link" href="{% url 'collections' %}"><i class="fa fa-cubes"></i>&nbsp;Collections</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#"><i class="fa fa-shopping-cart"></i>&nbsp;Cart</a>
           </li>
         </ul>
         <form class="d-flex">
