--- a/apv/templates/shop/layouts/main.html
+++ b/apv/templates/shop/layouts/main.html
@@ -11,6 +11,7 @@
     <title>{% block title %}
            {%endblock title %}
     </title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
   </head>
   <body>
@@ -20,6 +21,7 @@
 
     {% block scripts %}
     {% endblock scripts %}
+    {% include 'shop/inc/footer.html' %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
 </html>
