--- a/static/css/style.css
+++ b/static/css/style.css
@@ -28,3 +28,20 @@ a{
     border-radius: 5px;
 
 }
+.pic-box{
+    position: relative;
+}
+.hot{
+    background-color: orangered;
+    width:50px;
+    text-align: center;
+    color: white;
+    font-weight: bold;
+    display: inline;
+    border-radius: 5px;
+    padding: 5px;
+    position: absolute;
+    top:0;
+    right: 8px;
+    z-index: 10;
+}
