--- a/apv/templates/shop/products/product_details.html
+++ b/apv/templates/shop/products/product_details.html
@@ -17,7 +17,10 @@
                     </ol>
                   </nav>
             </div>
-            <div class="col-4 my-3">
+            <div class="col-4 my-3 pic-box">
+                {% if products.trending %}
+                <div class="hot">Hot</div>
+                {% endif %}
                 <img src="{{ products.product_image.url }}" class="card-img-top" alt="{{products}}">
             </div>
             <div class="col-8 my-3">
@@ -32,7 +35,11 @@
                 </p>
                 <h6 class="my-2 text-danger">Current Price : Rs.<s>{{products.original_price}}</s></h6>
                 <h5 class="my-2 text-primary">Offer Price : {{products.selling_price}}</h5>
-                <button class="btn btn-primary"><i class="fa fa-cart"></i>Add to Cart</button>
+                {% if products.quantity >  0 %}
+                <button class="btn btn-primary"><i class="fa fa-shopping-cart">&nbsp;</i>Add to Cart</button>
+                {% else %}
+                <button class="btn btn-secondary"><i class="fa fa-minus"></i>Out of Stock </button>
+                {% endif %}
                 <button class="btn btn-danger"><i class="fa fa-heart"></i></button>
             </div>
         </div>
