Register Page Updated

--- a/apv/templates/shop/index.html
+++ b/apv/templates/shop/index.html
@@ -23,7 +23,11 @@
         }
     </style>
     <div class="container" style="margin-top: 70px;">
-        <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col-12">
+            <h4 class="mb-3">Latest Offers</h4>
+                <hr style="border-color: #b8bfc8 ;">
+        </div>
+        <div class="row row-cols-1 row-cols-md-4 g-4">
             {% for item in products %}
             <div class="col">
                 <div class="card product-card">
