--- a/apv/templates/shop/inc/navbar.html
+++ b/apv/templates/shop/inc/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#"><i class="fa fa-cart-plus"></i>&nbsp;APV ShopKart</a>
+      <a class="navbar-brand" href="{% url 'home' %}"><i class="fa fa-cart-plus"></i>&nbsp;APV ShopKart</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
