--- a/apv/templates/shop/register.html
+++ b/apv/templates/shop/register.html
@@ -7,8 +7,51 @@
 <div class="container" style="margin-top: 70px;">
     <div class="row">
         <div class="col-12">
-            <h1>Register Form</h1>
+            <h4 class="mb-3">Register Form</h1>
+            <hr style="border-color:#b8bfc2;">
+            
         </div>
     </div>
+    <section class="py-4 my-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-6">
+                    <form method="post" action="">
+                        {% csrf_token %}
+                        <div class="mb-4">
+                            <label for="" class="form-label">User Name</label>
+                            <h3>{{form.username}} </h3>
+                            {% if form.error.username %}
+                            <label class="text-danger">{{form.error.username}}</label>
+                            {% endif %}
+                        </div>
+                        <div class="mb-4">
+                            <label for="" class="form-label">Email</label>
+                            <h3>{{form.email}} </h3>
+                            {% if form.error.email %}
+                            <label class="text-danger">{{form.error.email}}</label>
+                            {% endif %}
+                        </div>
+                        <div class="mb-4">
+                            <label for="" class="form-label">Password</label>
+                            <h3>{{form.password1}}</h3>
+                            {% if form.error.password1 %}
+                            <label class="text-danger">{{form.error.password1}}</label>
+                            {% endif %}
+                        </div>
+                        <div class="mb-4">
+                            <label for="" class="form-label"> Conform password</label>
+                            <h3>{{form.password2}}</h3>
+                            {% if form.error.password2 %}
+                            <label class="text-danger">{{form.error.password2}}</label>
+                            {% endif %}
+                        </div>
+                        <button type="submit" class="btn btn-primary">Register</button>
+                    </form>
+                    <p class="my-2">Already User ? <a href="#">Login Now</a></p>
+                </div>
+            </div>
+        </div>
+    </section>
 </div>
 {% endblock content %}
