Login page and Logout Page Updated

--- a/apv/templates/shop/collections.html
+++ b/apv/templates/shop/collections.html
@@ -22,6 +22,7 @@
             <div class="col-12">
                 <h4 class="mb-3">Catagories</h4>
                 <hr style="border-color:#b8bfc2">
+                {% include 'shop/inc/message.html' %}
             </div>
 
             {% for item in catagory %}
