--- a/apv/templates/shop/inc/navbar.html
+++ b/apv/templates/shop/inc/navbar.html
@@ -1,28 +1,24 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <div class="container">
-      <a class="navbar-brand" href="{% url 'home' %}"><i class="fa fa-cart-plus"></i>&nbsp;APV ShopKart</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{% url 'home' %}"><i class="fa fa-cart-home"></i>&nbsp;Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'register' %}"><i class="fa fa-user"></i>&nbsp;Register</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'collections' %}"><i class="fa fa-cubes"></i>&nbsp;Collections</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#"><i class="fa fa-shopping-cart"></i>&nbsp;Cart</a>
-          </li>
-        </ul>
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
-      </div>
+  <div class="container">
+    <a class="navbar-brand" href="{% url 'home' %}"><i class="fa fa-cart-plus"> ShopKart</i></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="navbar-nav ms-auto">
+      <a class="nav-link" aria-current="page" href="{% url 'home' %}"><i class="fa fa-home"></i>Home</a>
+      {% if request.user.is_authenticated %}
+        <a class="nav-link" aria-current="page" href="#"><i class="fa fa-user"></i>{{request.user}}</a>
+        <a class="nav-link" aria-current="page" href="{% url 'logout' %}"><i class="fa fa-sign-out"></i>Logout</a>
+      {% else %}
+        <a class="nav-link" href="{% url 'login' %}"><i class="fa fa-sign-in">Login</i></a>
+        <a class="nav-link" href="{% url 'register' %}"><i class="fa fa-users">Register</i></a>
+      {% endif %}
+        <a class="nav-link" href="{% url 'collections' %}"><i class="fa fa-cubes"></i>Collections</a>
+        <a class="nav-link" href="#"><i class="fa fa-shopping-cart"></i>Cart</a>
     </div>
-  </nav>
+
+  </div>
+
+  </div>
+</nav>
