--- a/apv/templates/shop/products/product_details.html
+++ b/apv/templates/shop/products/product_details.html
@@ -9,6 +9,7 @@
             <div class="col-12">
                 <h4 class="mb-3">{{products}} Details</h4>
                 <hr style="border-color: #b8bfc8 ;">
+                {% include 'shop/inc/message.html' %}
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb">
                       <li class="breadcrumb-item"><a href="{% url 'home' %}">Home</a></li>
