--- a/apv/templates/shop/inc/navbar.html
+++ b/apv/templates/shop/inc/navbar.html
@@ -1,21 +1,21 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
   <div class="container">
-    <a class="navbar-brand" href="{% url 'home' %}"><i class="fa fa-cart-plus"> ShopKart</i></a>
+    <a class="navbar-brand" href="{% url 'home' %}"><i class="fa fa-cart-plus"> APV ShopKart</i></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav ms-auto">
-      <a class="nav-link" aria-current="page" href="{% url 'home' %}"><i class="fa fa-home"></i>Home</a>
+      <a class="nav-link" aria-current="page" href="{% url 'home' %}"><i class="fa fa-home"></i>&nbsp;Home</a>
       {% if request.user.is_authenticated %}
-        <a class="nav-link" aria-current="page" href="#"><i class="fa fa-user"></i>{{request.user}}</a>
-        <a class="nav-link" aria-current="page" href="{% url 'logout' %}"><i class="fa fa-sign-out"></i>Logout</a>
+        <a class="nav-link" aria-current="page" href="#"><i class="fa fa-user"></i>&nbsp;{{request.user}}</a>
+        <a class="nav-link" aria-current="page" href="{% url 'logout' %}"><i class="fa fa-sign-out"></i>&nbsp;Logout</a>
       {% else %}
-        <a class="nav-link" href="{% url 'login' %}"><i class="fa fa-sign-in">Login</i></a>
-        <a class="nav-link" href="{% url 'register' %}"><i class="fa fa-users">Register</i></a>
+        <a class="nav-link" href="{% url 'login' %}"><i class="fa fa-sign-in">&nbsp;Login</i></a>
+        <a class="nav-link" href="{% url 'register' %}"><i class="fa fa-users">&nbsp;Register</i></a>
       {% endif %}
-        <a class="nav-link" href="{% url 'collections' %}"><i class="fa fa-cubes"></i>Collections</a>
-        <a class="nav-link" href="#"><i class="fa fa-shopping-cart"></i>Cart</a>
+        <a class="nav-link" href="{% url 'collections' %}"><i class="fa fa-cubes"></i>&nbsp;Collections</a>
+        <a class="nav-link" href="#"><i class="fa fa-shopping-cart"></i>&nbsp;Cart</a>
     </div>
 
   </div>
